--- a/test/fixtures/projects_languages.yml
+++ b/test/fixtures/projects_languages.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  proyect: one
-  framework: one
+  project: one
+  language: one
 
 two:
-  proyect: two
-  framework: two
+  project: two
+  language: two
