--- a/test/fixtures/projects_skills.yml
+++ b/test/fixtures/projects_skills.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  proyect: one
+  project: one
   skill: one
 
 two:
-  proyect: two
+  project: two
   skill: two
